# rust-cpp-ffi-test

./: README.MD
src-cpp/: CMakeLists.txt  README.MD  library.cpp  library.h
src-rust/: .gitignore  Cargo.toml  README.MD  build.rs
src-rust/src/: cpplink.rs  main.rs
